Most of options. Need testing

--- a/options.html
+++ b/options.html
@@ -91,6 +91,8 @@
     </div>
 
     <script src="external/browser-polyfill.min.js"></script>
+    <script src="scripts/storage.js"></script>
+    <script src="scripts/buildSavedSiteHTML.js"></script>
     <script src="scripts/options.js"></script>
 </body>
 
