Popup: login working but buggy. Generation working

--- a/options.html
+++ b/options.html
@@ -3,6 +3,7 @@
 <html style="height:100%">
 
 <head>
+    <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
