--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
         body {
             height: 400px;
             width: 400px;
+            overflow: hidden;
         }
     </style>
 </head>
@@ -38,11 +39,9 @@
     
     <section id="identity" style="display: block;">
         <h4>Identity</h4>
-        <form onsubmit="return false;">
-            <input id="username" type="text" placeholder="Your Full Name" /><br>
-            <input id="masterpass" type="password" placeholder="Your Master Password" /><br>
-            <button id="login" type="submit" style="margin-top:10px">Login</button>
-        </form>
+        <input id="username" type="text" placeholder="Your Full Name" /><br>
+        <input id="masterpass" type="password" placeholder="Your Master Password" /><br>
+        <button id="login" type="button" style="margin-top:10px">Login</button>
         <img id="spinner" src="images/spinner.svg" style="display:none;margin:auto;">
     </section>
     
