Split some popup functions into mpw utils for use in contentjs

--- a/popup.html
+++ b/popup.html
@@ -101,8 +101,9 @@
         </div>
     </div>
     <script src="external/browser-polyfill.min.js"></script>
-    <script src="scripts/popup-helpers.js"></script>
+    <script src="scripts/popup-uihelpers.js"></script>
     <script src="scripts/storage.js"></script>
+    <script src="scripts/mpw-utils.js"></script>
     <script src="scripts/popup.js"></script>
 </body>
 </html>
