Save and edit site details

--- a/popup.html
+++ b/popup.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div style="width:100%; display:flex">
-            <button id="savedetails" style="width:100%; margin:8px 0 12px 0;">Save Details</button>
+            <button id="savedetails" type="button" style="width:100%; margin:8px 0 12px 0;">Save Details</button>
         </div>
         <div style="width:100%; margin-top:10px; display:flex; border:1px solid #D1D1D1; border-radius:4px;">
             <div style="width:72%">
